fixed layout issue on index page

--- a/index.css
+++ b/index.css
@@ -72,6 +72,8 @@ img {
 
 @media only screen and (min-width: 600px) {
  #game {
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 10px 100px;
+  max-width: 800px;
  }
 }
